[package]
name = "tusk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.68"
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
dotenvy = "0.15.6"
futures = "0.3.27"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.5.0"
