[package]
name = "tusk"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.68"
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
dotenvy = "0.15.6"
futures = "0.3.27"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
walkdir = "2.3.3"

[dev-dependencies]
tempfile = "3.5.0"
tokio-test = "*"
